Updated lsp linter and formatters

--- a/ansible/playbooks/roles/user_gmc/tasks/gmc_macos.yml
+++ b/ansible/playbooks/roles/user_gmc/tasks/gmc_macos.yml
@@ -2,6 +2,7 @@
 - name: install brew packages
   community.general.homebrew:
     name:
+      - cspell  # Code speller
       - docker
       - fd   # Used for neovim telescope
       - go
