Added Hyprland debug for hdr in gaming

--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -18,6 +18,9 @@ exec-once = waybar & hyprpaper & hypridle & streamdeck -n
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
+# Debugging to keep High Dynamic Range in games
+debug:full_cm_proto = true
+
 input {
     kb_layout = us,ca,us
     kb_variant = ,multix,intl
