Added linters and lazygit interaction

--- a/nixos/home-manager/gmc/nvim/.codebook.toml
+++ b/nixos/home-manager/gmc/nvim/.codebook.toml
@@ -3,6 +3,8 @@ words = [
     "analyzer",
     "ansible",
     "ansiblels",
+    "asmfmt",
+    "augroup",
     "autoindent",
     "autopairs",
     "autoread",
@@ -13,12 +15,14 @@ words = [
     "bufnr",
     "cmake",
     "cmakelint",
+    "codelldb",
     "colorcolumn",
     "commentstring",
     "completeopt",
     "cssls",
     "cursorline",
     "cwd",
+    "dap",
     "decremental",
     "dockerls",
     "expandtab",
@@ -26,6 +30,7 @@ words = [
     "fileformat",
     "fzf",
     "gitcommit",
+    "gitsigns",
     "glyphs",
     "gmc",
     "gomod",
@@ -41,9 +46,11 @@ words = [
     "jsonlint",
     "jsonls",
     "jsregexp",
+    "kdheepak",
     "keybinds",
     "keymap",
     "keymaps",
+    "linters",
     "lspkind",
     "luadoc",
     "lualine",
@@ -73,6 +80,7 @@ words = [
     "softtabstop",
     "splitbelow",
     "splitright",
+    "stylelua",
     "stylua",
     "systemdlint",
     "tabclose",
