--- a/ansible/playbooks/roles/user_gmc/files/starship-mac.toml
+++ b/ansible/playbooks/roles/user_gmc/files/starship-mac.toml
@@ -1,18 +1,14 @@
 format = """
-[░▒▓](#a3aed2)\
-[  ](bg:#a3aed2 fg:#090c0c)\
+[](fg:#a3aed2)\
+$os\
 [](bg:#769ff0 fg:#a3aed2)\
 $directory\
 [](fg:#769ff0 bg:#394260)\
+$nix_shell\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#212736)\
-$golang\
-$php\
-$rust\
-[](fg:#212736 bg:#1d2230)\
-$time\
-[ ](fg:#1d2230)\
+[](fg:#394260)\
+$package\
 \n$character"""
 
 [directory]
@@ -36,6 +32,11 @@ format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 style = "bg:#394260"
 format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
 
+[nix_shell]
+format = "[[ $symbol](bg:#394260)]($style)"
+symbol = "❄️"
+style = "bg:394260"
+
 [nodejs]
 symbol = ""
 style = "bg:#212736"
@@ -51,8 +52,20 @@ symbol = ""
 style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
-[time]
+[os]
 disabled = false
+format = "[[$symbol](bg:#a3aed2)]($style)"
+style = "bg:#a3aed2"
+
+[package]
+format = "[$symbol$version](208)"
+#[php]
+#symbol = ""
+#style = "bg:#212736"
+#format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+
+[time]
+disabled = true
 time_format = "%R" # Hour:Minute Format
 style = "bg:#1d2230"
 format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
