starship working multios, and nvim detects venv

--- a/nixos/home-manager/gmc/nvim/.codebook.toml
+++ b/nixos/home-manager/gmc/nvim/.codebook.toml
@@ -3,6 +3,7 @@ words = [
     "analyzer",
     "ansible",
     "ansiblels",
+    "antosha",
     "asmfmt",
     "augroup",
     "autoindent",
@@ -28,6 +29,7 @@ words = [
     "expandtab",
     "fileencoding",
     "fileformat",
+    "folke",
     "fzf",
     "gitcommit",
     "gitsigns",
@@ -38,10 +40,12 @@ words = [
     "gosum",
     "hls",
     "hlsearch",
+    "hrsh",
     "ignorecase",
     "incsearch",
     "integrations",
     "isort",
+    "jglasovic",
     "josean",
     "jsonlint",
     "jsonls",
@@ -51,6 +55,7 @@ words = [
     "keymap",
     "keymaps",
     "linters",
+    "lspconfig",
     "lspkind",
     "luadoc",
     "lualine",
@@ -61,6 +66,7 @@ words = [
     "maximizer",
     "maxwidth",
     "menuone",
+    "mfussenegger",
     "monokai",
     "neovim",
     "netrw",
@@ -72,6 +78,7 @@ words = [
     "oldfiles",
     "parsers",
     "pydocstyle",
+    "pyproject",
     "pyright",
     "rstcheck",
     "scrolloff",
@@ -94,6 +101,7 @@ words = [
     "timeoutlen",
     "tmux",
     "unnamedplus",
+    "venv",
     "vimdoc",
     "vscode",
     "yamllint",
