--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -31,8 +31,8 @@ env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,ca,us
-    kb_variant = ,multix,intl
+    kb_layout = us,ca,gmc
+    kb_variant = ,multix,gmc
     kb_model =
     kb_options = grp:alt_shift_toggle,caps:none
     kb_rules =
