Goemon using new gmc layout

--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -22,8 +22,8 @@ env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 debug:full_cm_proto = true
 
 input {
-    kb_layout = us,ca,us
-    kb_variant = ,multix,intl
+    kb_layout = us,ca,gmc
+    kb_variant = ,multix,gmc
     kb_model =
     kb_options = grp:alt_shift_toggle,caps:none
     kb_rules =
