--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -14,7 +14,7 @@ input {
     kb_layout = gmc
     kb_variant = tarmak1
     kb_model =
-    kb_options = grp:alt_shift_toggle,caps:none
+    kb_options = caps:none
     kb_rules =
 
     follow_mouse = 1
