Fixed missing Nix language server. iio-hyprland works

--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -8,7 +8,7 @@
 
 $polkit = systemctl --user start hyprpolkitagent
 $kbd = brightnessctl -d platform::kbd_backlight set
-exec-once = waybar & hyprpaper & hypridle & $polkit & $kbd 0%
+exec-once = waybar & hyprpaper & hypridle & $polkit & iio-hyprland & $kbd 0%
 
 input {
     kb_layout = gmc
@@ -28,4 +28,4 @@ input {
 
 #disable_logs = false
 
-monitor=eDP-1, 1920x1080@60.0000, 0x0, 1   # Murasaki screen
+monitor=eDP-1,1920x1080@60.0000,0x0,1,transform,0   # Murasaki screen
