hypr plusgins work

--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -8,9 +8,22 @@
 
 $polkit = systemctl --user start hyprpolkitagent
 $kbd = brightnessctl -d platform::kbd_backlight set
-exec-once = waybar & hyprpaper & hypridle & $polkit & iio-hyprland & $kbd 0%
+exec-once = waybar & hyprpaper & wvkbd-mobintl & $kbd 0%
+
+device {
+  name = wacf2200:00-056a:526b
+  output = eDP-1
+}
+
+device {
+  name = wacf2200:00-056a:526b-touchscreen
+  output = eDP-1
+}
+
+env = AQ_DRM_DEVICES,/dev/dri/card1
 
 input {
+
     kb_layout = gmc
     kb_variant = tarmak1
     kb_model =
@@ -26,6 +39,30 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-#disable_logs = false
+#debug {
+#  disable_logs = false
+#}
 
-monitor=eDP-1,1920x1080@60.0000,0x0,1,transform,0   # Murasaki screen
+layerrule = abovelock true, wvkbd  # Ensure virtual keyboard over lock
+
+monitor=eDP-1,preferred,0x0,1,transform,0   # Murasaki screen
+
+plugin {
+  touch_gestures {
+    edge_margin = 10  # pixels
+    emulate_touchpad_wipe = false
+    long_press_delay = 400  # milliseconds
+    resize_on_border_long_press = true
+    sensitivity = 4.0
+    workspace_swipe_fingers = 3
+    workspace_swipe_edge = d
+
+    # Toggle onscreen keyboard
+    hyprgrass-bind = , edge:d:u, exec, kill -34 $(ps -C wvkbd-mobintl | tail -n 1 | awk '{print $1}')
+
+    # Volume Control
+    hyprgrass-bind = , edge:l:u, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+    hyprgrass-bind = , edge:l:d, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%-
+
+  }
+}
