--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -6,9 +6,8 @@
 # │                                                                                             │
 # └─────────────────────────────────────────────────────────────────────────────────────────────┘
 
-$polkit = systemctl --user start hyprpolkitagent
-$kbd = brightnessctl -d platform::kbd_backlight set
-exec-once = waybar & hyprpaper & wvkbd-mobintl & $kbd 0%
+exec-once = wvkbd-mobintl 
+exec-once = brightnessctl -d platform::kbd_backlight set 0%
 
 device {
   name = wacf2200:00-056a:526b
