--- a/k8s/fleetwood/aaa/bind9/configmap.yaml
+++ b/k8s/fleetwood/aaa/bind9/configmap.yaml
@@ -55,7 +55,7 @@ data:
   db-cummings-online: |
     $TTL 86400
     @  IN    SOA   ns.cummings-online.local. gmc.cummings-online.local. (
-      2026010402   ; serial
+      2026020402   ; serial
            86400   ; refresh
            28800   ; retry
           604800   ; expire
@@ -69,26 +69,27 @@ data:
     gw-mtl      IN	A	192.168.68.1
     bambu       IN	A	192.168.68.232
     brother     IN	A	192.168.68.61
-    canon	    IN	A	192.168.73.61
+    canon	      IN	A	192.168.73.61
+    colour      IN  A 192.168.68.62
     goemon      IN	A	192.168.68.73
     goliath     IN	A	192.168.68.74
-    rpi1	    IN 	A 	192.168.68.31
-    rpi2 	    IN 	A 	192.168.68.32
-    rpi3        IN 	A 	192.168.68.33
+    rpi1	      IN 	A	192.168.68.31
+    rpi2 	      IN 	A	192.168.68.32
+    rpi3        IN 	A	192.168.68.33
     rpi4        IN	A	192.168.68.34
     fujiko      IN	A	192.168.73.12
     gw-knw      IN	A	192.168.73.1
-    jigen       IN  A   10.11.0.3
-    jigen-int   IN  A   172.16.73.3
+    jigen       IN  A 10.11.0.3
+    jigen-int   IN  A 172.16.73.3
     knw-access  IN	A	192.168.73.43
     knw-ha      IN	A	192.168.73.41
     knw-jump    IN	A	192.168.73.42
-    lupin       IN  A   10.11.0.2
-    lupin-int   IN  A   172.16.73.2
+    lupin       IN  A 10.11.0.2
+    lupin-int   IN  A 172.16.73.2
     ns3         IN	A	192.168.73.31
-    sanda       IN  A   192.168.68.231
+    sanda       IN  A 192.168.68.231
     spectre     IN	A	192.168.68.254
-    zenigata    IN  A   10.11.0.4
+    zenigata    IN  A 10.11.0.4
     zenigata-int IN  A   172.16.73.4
     ingress1    IN  A   10.11.0.10
     ldap        IN  A   10.11.0.11
@@ -119,7 +120,7 @@ data:
   db-192-168: |
     $TTL 86400
     @ IN SOA ns.cummings-online.local hostmaster.cummings-online.local. (
-     2026010401 ; serial
+     2026020401 ; serial
           86400 ; refresh
           28800 ; retry
          604800 ; expire
@@ -133,6 +134,7 @@ data:
     ; PTR --------------------------------------------------------------
     68.1    IN PTR gw-mtl.cummings-online.local.
     68.61   IN PTR brother.cummings-online.local.
+    68.62   IN PTR colour.cummings-online.local.
     68.74   IN PTR goliath.cummings-online.local.
     68.31   IN PTR rpi1.cummings-online.local.
     68.32   IN PTR rpi2.cummings-online.local.
