--- a/nixos/home-manager/gmc/hypr/glaucus.conf
+++ b/nixos/home-manager/gmc/hypr/glaucus.conf
@@ -6,15 +6,14 @@
 # │                                                                                             │
 # └─────────────────────────────────────────────────────────────────────────────────────────────┘
 
-$polkit = systemctl --user start hyprpolkitagent
-$kbd = brightnessctl -d platform::kbd_backlight set
-exec-once = waybar & hyprpaper & hypridle & $polkit & $kbd 0%
+exec-once = hypridle
+exec-once = brightnessctl -d platform::kbd_backlight set
 
 input {
     kb_layout = gmc
     kb_variant = 
     kb_model =
-    kb_options = grp:alt_shift_toggle,caps:none
+    kb_options = caps:none
     kb_rules =
 
     follow_mouse = 1
