--- a/nixos/home-manager/gmc/hypr/goemon.conf
+++ b/nixos/home-manager/gmc/hypr/goemon.conf
@@ -6,13 +6,13 @@
 # │                                                                                             │
 # └─────────────────────────────────────────────────────────────────────────────────────────────┘
 
-exec-once = waybar & hyprpaper & hypridle & streamdeck -n
+exec-once = streamdeck -n
 
 input {
     kb_layout = gmc
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle,caps:none
+    kb_options = caps:none
     kb_rules =
 
     follow_mouse = 1
