More gestures for hyprland

--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -6,7 +6,11 @@
 # │                                                                                             │
 # └─────────────────────────────────────────────────────────────────────────────────────────────┘
 
-exec-once = wvkbd-mobintl 
+$wvkbd = wvkbd-mobintl
+$hide_wvkbd = kill -34 $(ps -C wvkbd-mobintl | tail -n 1 | awk '{print $1}')
+
+exec-once = $wvkbd && $hide_wvkbd
+exec-once = iio-hyprland --left-master eDP-1
 exec-once = brightnessctl -d platform::kbd_backlight set 0%
 
 device {
@@ -58,6 +62,7 @@ plugin {
 
     # Toggle onscreen keyboard
     hyprgrass-bind = , edge:d:u, exec, kill -34 $(ps -C wvkbd-mobintl | tail -n 1 | awk '{print $1}')
+    hyprgrass-bind = , edge:u:d, exec, wofi -c ~/.config/wofi/wofi.com
 
     # Volume Control
     hyprgrass-bind = , edge:l:u, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
