Gestures still being worked on

--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -6,10 +6,6 @@
 # │                                                                                             │
 # └─────────────────────────────────────────────────────────────────────────────────────────────┘
 
-$wvkbd = wvkbd-mobintl
-$hide_wvkbd = kill -34 $(ps -C wvkbd-mobintl | tail -n 1 | awk '{print $1}')
-
-exec-once = $wvkbd && $hide_wvkbd
 exec-once = iio-hyprland --left-master eDP-1
 exec-once = brightnessctl -d platform::kbd_backlight set 0%
 
@@ -61,8 +57,14 @@ plugin {
     workspace_swipe_edge = d
 
     # Toggle onscreen keyboard
-    hyprgrass-bind = , edge:d:u, exec, kill -34 $(ps -C wvkbd-mobintl | tail -n 1 | awk '{print $1}')
-    hyprgrass-bind = , edge:u:d, exec, wofi -c ~/.config/wofi/wofi.com
+    hyprgrass-bind = , edge:d:u, exec, ~/.config/hypr/toggle_keyboard.sh
+
+    # Turn application menu on
+    hyprgrass-bind = , edge:u:d, exec, wofi -c ~/.config/wofi/wofi.conf
+
+    # Close current application
+    hyprgrass-bind = , swipe:2:lu, killactive
+
 
     # Volume Control
     hyprgrass-bind = , edge:l:u, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
