gmc layout alterations

--- a/.codebook.toml
+++ b/.codebook.toml
@@ -17,6 +17,7 @@ words = [
     "cmake",
     "cmakelint",
     "codelldb",
+    "colemak",
     "colorcolumn",
     "commentstring",
     "completeopt",
@@ -102,6 +103,7 @@ words = [
     "tabnew",
     "tabp",
     "tabstop",
+    "tarmak",
     "termguicolors",
     "terraformls",
     "timeoutlen",
