--- a/nixos/home-manager/gmc/hypr/murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/murasaki.conf
@@ -25,7 +25,7 @@ input {
 
     kb_layout = gmc
     kb_variant = tarmak2
-    kb_model =
+    kb_model = gmc_thinkbook_itl
     kb_options = caps:none
     kb_rules =
 
